[gd_scene load_steps=11 format=3 uid="uid://ca6n3d05wd8xd"]

[ext_resource type="Texture2D" uid="uid://cbml52o5ut3n" path="res://assets/background/background.png" id="1_lkvnj"]
[ext_resource type="Script" uid="uid://dl3yt5u8ghjil" path="res://scenes/menus/main menu/main_menu.gd" id="1_ocmjx"]
[ext_resource type="Texture2D" uid="uid://cymnmnks1sxto" path="res://assets/flame/flame_2.png" id="2_8ps34"]
[ext_resource type="Theme" uid="uid://8n7hmf7q53wo" path="res://assets/themes/dynapuff.tres" id="3_2pddd"]
[ext_resource type="Texture2D" uid="uid://eo7xll3s1jd1" path="res://assets/flame/flame_1.png" id="3_r835o"]
[ext_resource type="Texture2D" uid="uid://d304avqfvx4u1" path="res://assets/food/burger/burger_cooked.png" id="4_g10uv"]
[ext_resource type="Texture2D" uid="uid://cp8v8li15ikfx" path="res://assets/food/sausage/sausage_cooked.png" id="5_4jub7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ugfu2"]
atlas = ExtResource("2_8ps34")
region = Rect2(0, 0, 295, 236)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssxho"]
atlas = ExtResource("3_r835o")
region = Rect2(0, 0, 295, 236)

[sub_resource type="SpriteFrames" id="SpriteFrames_wbpnk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugfu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssxho")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_ocmjx")
game_scene = "res://scenes/grill_master.tscn"
settings_scene = "res://scenes/menus/settings/settings.tscn"
high_score_scene = "res://scenes/menus/high scores/high_scores.tscn"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(480, 270)
texture = ExtResource("1_lkvnj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/Sprite2D"]
position = Vector2(255, -110)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_wbpnk")
autoplay = "default"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Sprite2D"]
position = Vector2(-300, 0)
texture = ExtResource("4_g10uv")

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/Sprite2D"]
position = Vector2(-150, 0)
texture = ExtResource("5_4jub7")

[node name="Sprite2D3" type="Sprite2D" parent="CanvasLayer/Sprite2D"]
position = Vector2(300, 0)
texture = ExtResource("4_g10uv")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 960.0
offset_bottom = 540.0
color = Color(0, 0, 0, 0.490196)

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 960.0
offset_bottom = 100.0
theme = ExtResource("3_2pddd")
text = "Grill Master"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(240, 355)
offset_left = 25.0
offset_top = 25.0
offset_right = 265.0
offset_bottom = 380.0
size_flags_vertical = 4
theme_override_constants/separation = 25
alignment = 1

[node name="StartButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2pddd")
text = "Play"

[node name="SettingsButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2pddd")
text = "Settings
"

[node name="HighScoreButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2pddd")
text = "Leaderboards"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HighScoreButton" to="." method="_on_high_score_button_pressed"]
